--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,6 +1,10 @@
-window#waybar {
+* {
+    font-family: SourceCodePro, sans-serif;
     font-weight: 500;
     font-size: 15px;
+}
+
+window#waybar {
     background: rgba(0, 0, 0, 0.3);
     color: rgb(255, 255, 255);
     border: 1px solid rgba(255, 255, 255, 0.3);
