--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -4,19 +4,25 @@ window#waybar {
     background: rgba(0, 0, 0, 0.3);
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 10px;
-    color: rgb(255, 255, 255);
+    color: white;
+}
+
+#workspaces button {
+    color: gray;
 }
 
 #workspaces button.focused {
+    color: white;
     font-weight: bold;
 }
 
-#cpu
-#memory
-#clock
-#battery
-#cpu
-#pulseaudio
+/* #cpu */
+/* #memory */
+/* #clock */
+/* #battery */
+/* #cpu */
+/* #pulseaudio */
+
 #tray {
     margin: 14px 14px 14px 14px;
     min-width: 50px;
